# novelcraft-agent

./: README.md  pyproject.toml
examples/: sample_novel.txt
skills/: character_conflict.md  dialogue_drive.md  foreshadowing_insert.md  information_reveal.md  quiet_scene_shift.md  tension_raise.md
src/novelcraft_agent/: __init__.py  cleaner.py  cli.py  io.py  ollama_client.py  pipeline.py  prompts.py  skills.py
tests/: test_cleaner.py  test_cli.py  test_io.py  test_ollama_client.py  test_pipeline.py  test_prompts.py  test_skills.py
