[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novelcraft-agent"
version = "0.1.0"
description = "Local novel continuation CLI powered by Ollama"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "novelcraft-agent" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
